public/create/pages/css/pages/create.css
#container {
	padding: 20px;
}

.section-unisquare, .section-projects {
	float: left;
}
.section-unisquare {
	position: fixed;
	margin: 0 10px 0 0 !important;
	padding: 10px !important;
	width: 300px !important;
	height: 300px !important;
	border: 2px solid #fff;
	background: none #c6c6c6;
	box-shadow: 0px 5px 5px -5px #ccc;

	background-image: -webkit-radial-gradient(center center, circle contain, rgba(255,255,255,0.7) 30%, rgba(255,255,255,0.1) 100%); /* WebKit */
	background-image: -moz-radial-gradient(center center, circle contain, rgba(255,255,255,0.7) 30%, rgba(255,255,255,0.1) 100%); /* Firefox */
	background-image: -ms-radial-gradient(center center, circle contain, rgba(255,255,255,0.7) 30%, rgba(255,255,255,0.1) 100%); /* IE10+ */
	background-image: -o-radial-gradient(center center, circle contain, rgba(255,255,255,0.7) 30%, rgba(255,255,255,0.1) 100%); /* Opera */
	background-image: radial-gradient(center center, circle contain, rgba(255,255,255,0.7) 30%, rgba(255,255,255,0.1) 100%);
}
.section-unisquare.white-bg {
	background-color: #fff;
}

.section-projects-container {
	min-height: 360px;
	width: -webkit-calc(100% - 360px) !important;
	width: -o-calc(100% - 360px) !important;
	width: -moz-calc(100% - 360px) !important;
	width: calc(100% - 360px) !important;
	margin: 0 0 0 325px !important;
}

.projects-title {
	margin: 0 0 5px 0 !important;
	font-size: 40px;
	font-weight: 700;
	color: #000;
}

.section-projects {
	margin: 0 0 0 0 !important;
}

.project {
	position: relative;
	background: url("../../images/ebook.svg");
	margin: 0 15px 15px 0;
	width: 100px;
	height: 129px;
	float: left;
	cursor: pointer;
}
.project:hover, .project:focus {
	background: url("../../images/ebook_hover.svg")
}
.project.new {
	background: url("../../images/ebook_new.svg")
}
.project.new:hover, .project.new:focus {
	background: url("../../images/ebook_new_hover.svg")
}
.project.archived {
	background: url("../../images/ebook_archived.svg")
}

.project p {
	display: table-cell;
	vertical-align: middle;
	text-align: center;
	cursor: pointer;
}

.project .project-options-show {
	position: absolute;
	top: 5px;
	right: 20px;
	padding: 6px;
	cursor: pointer;
	z-index: 15;
}
.project .project-options-show.open {
	padding: 5px;
	background: #fff;
	border: 1px solid #000;
	border-bottom: #fff;
}

.project .project-options-show .arrow {
	width: 0;
	height: 0;
	border-left: 5px solid transparent;
	border-right: 5px solid transparent;
	border-top: 5px solid #000;
}

.project input {
	margin-top: 30px !important;
}

.project-options {
	position: absolute;
	top: 20px;
	right: 20px;
	background: none #fff;
	z-index: 10;
	border: 1px solid #000;
}
.project-options-menupoint {
	cursor: pointer;
	padding: 6px;
	text-transform: capitalize;
}
.project-options-menupoint:hover {
	background: none #ffffcc;
}
.project-archived {
	opacity: 0.5;
}
.project-link {
	position: absolute;
	top: 20px;
	left: 6px;
	overflow: hidden;
	width: 74px;
	height: 90px;
	padding: 5px;
	text-align: center;
	word-wrap: break-word;
}
.project-link.show-all {
	overflow: visible;
	background-color: #fff;
	height: auto;
}
.project-link.show-more {
	top: inherit;
	bottom: 18px;
	height: 28px;
	background: #fff;
}

.filter-sort, .filter-search {
	position: relative;
}
.filter-sort {

}
.filter-search {

}

textarea#rename {
	position: absolute;
	top: 0;
	left: 5px;
	text-align: center;
	padding: 5px;
	margin: 30px 5px 5px;
	width: 65px;
	height: 75px;
	border: 1px solid #ffff99;
	resize: none;
	outline: none;
	overflow: hidden;
}

.animate-enter, .animate-leave {
	-webkit-transition: all 0.5s ease-in-out;
	-moz-transition: all 0.5s ease-in-out;
	-o-transition: all 0.5s ease-in-out;
	transition: all 0.5s ease-in-out;
}
.animate-leave.animate-leave-active, .animate-enter {
	opacity: 0;
}
.animate-enter.animate-enter-active, .animate-leave {
	opacity: 1;
}

.frontpage-link {
	color: #fff;
}
.frontpage-link p {
	float: left;
	padding-left: 5px;
	margin-top: 0;
}
.frontpage-link:hover .arrow-left {
	border-right: 6px solid #666;
}
.arrow-left {
	float: left;
	width: 0;
	height: 0;
	margin-top: 2px;
	border-top: 6px solid transparent;
	border-bottom: 6px solid transparent;
	border-right: 6px solid #fff;
}
.logo-box {
	text-align: center;
	padding-top: 70px;
}
.logo {
	width: 30%;
}
.readmore{
	text-decoration: underline;
	color:#999;
}
.uni-bottom-box {
	height: 60px;
	background-color: #fff;
	position: absolute;
	left: 0;
	width: 100%;
	bottom: 0;
}
.user-box {
	padding: 6px;
}
.user-image {
	float: left;
}
.user-text {
	float: left;
	width: 225px;
	color: #000;
	padding-top: 5px;
	padding-left: 10px;
	font-size: 90%;
}
.user-name {
	height: 16px;
	overflow: hidden;
}
.user-name.settings {
	height: 100%;
}
.user-links a {
	cursor: pointer;
	text-decoration: underline;
}
.user-links a, span {
	font-size: 80%;
	color: #666;
}
.user-links a:hover {
	color: #000;
}
.user-settings .user-box {
	height: 115px;
	padding-left: 10px;
}
.settings-text {
	float: left;
	font-size: 120%;
	font-weight: 900;
	color: #000;
	opacity: 0.6;
	width: 160px;
	padding-top: 20px;
	padding-left: 15px;
}
hr {
	width: 92%;
	border: 0; border-top: 1px solid #fff265;
}
.user-settings-options {
	font-size: 90%;
	padding-left: 10px;
}
.user-settings-options .user-email input {
	width: auto;
	-moz-border-radius: 1px;
	-webkit-border-radius: 1px;
	border-radius: 1px;
	-webkit-appearance: none;
	color: #818285;
}
.user-settings-options .user-email input:disabled {
	background: #f6f6f6;
}
.user-settings-options a {
	font-size: 80%;
	text-decoration: underline;
	color: #666;
	cursor: pointer;
}
.user-settings-options a:hover {
	color: #000;
}
.user-email {
	width: 266px;
	overflow: hidden;
}
.edit-password {
	padding-top: 5px;
	padding-left: 5px;
}
.edit-password form .button {
	margin-left: 7px;
}
.edit-password input {
	margin-bottom: 5px;
}
.edit-newsletter {
	padding-top: 5px;
}

